--- a/lib/l10n/app_kk.arb
+++ b/lib/l10n/app_kk.arb
@@ -194,10 +194,6 @@
     "@clearCache": {
         "description": "Кэшті тазалау батырмасы"
     },
-    "developerModeEnabled": "🔧 Әзірлеуші режимі іске қосылды! Debug Menu табы енді қолжетімді!",
-    "@developerModeEnabled": {
-        "description": "Әзірлеуші режимі іске қосылған хабарламасы"
-    },
     "activeTabs": "Белсенді табтар",
     "@activeTabs": {
         "description": "Белсенді табтар бөлімінің басшысы"
@@ -217,14 +213,6 @@
     "send": "ЖІБЕРУ",
     "@send": {
         "description": "Жіберу батырмасы"
-    },
-    "translateContent": "Мазмұнды аудару",
-    "@translateContent": {
-        "description": "Мазмұнды аудару debug нұсқасы"
-    },
-    "sensitiveContent": "Сезімтал мазмұн",
-    "@sensitiveContent": {
-        "description": "Сезімтал мазмұн debug нұсқасы"
     },
     "updateYourNickname": "Никнейміңізді жаңарту",
     "@updateYourNickname": {
@@ -398,5 +386,17 @@
     "mindsExported": "Ойлар экспортталды",
     "audioFilesExported": "Аудио файлдар экспортталды",
     "mindsImported": "Ойлар импортталды",
-    "audioFilesImported": "Аудио файлдар импортталды"
+    "audioFilesImported": "Аудио файлдар импортталды",
+    "onboardingMind1": "Сәлем!",
+    "onboardingMind2": "Мен keklist - қысқа жазбалардың жеке күнделігімін",
+    "onboardingMind2Comment1": "Жазбаларға түсініктеме қосуға болады",
+    "onboardingMind2Comment2": "Жазбаны ашу үшін оны түртіңіз",
+    "onboardingMind3": "'Күнтізбе' қойындысында барлық жазбалар күндер, апталар және айлар бойынша көрсетіледі",
+    "onboardingMind4": "'Аналитика' қойындысы жазбаларыңыздың қысқаша статистикасын көрсетеді",
+    "onboardingMind5": "Барлық жазбалар тек телефоныңызда сақталады",
+    "onboardingMind5Comment1": "Телефонды ауыстырғанда Импорт/Экспорт функциясын пайдаланыңыз",
+    "deleteOnboardingMindsTitle": "Оқыту жазбаларын жою керек пе?",
+    "deleteOnboardingMindsMessage": "Сіз алғашқы жазбаңызды жасадыңыз! Оқыту жазбаларын жойғыңыз келе ме?",
+    "keepTutorial": "Сақтау",
+    "deleteTutorial": "Жою"
 }
