Fix localization files

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -49,4 +49,5 @@
     "editMind": "Notiz bearbeiten",
     "enterTokenHere": "Token hier eingeben",
     "token": "Token",
-    "clearCache": "Cache leeren",
+    "clearCache": "Cache leeren"
+}
