--- a/lib/l10n/app_ja.arb
+++ b/lib/l10n/app_ja.arb
@@ -49,4 +49,5 @@
     "editMind": "メモを編集",
     "enterTokenHere": "ここにトークンを入力",
     "token": "トークン",
-    "clearCache": "キャッシュをクリア",
+    "clearCache": "キャッシュをクリア"
+}
