--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -49,4 +49,5 @@
     "editMind": "Редактировать заметку",
     "enterTokenHere": "Введите токен здесь",
     "token": "Токен",
-    "clearCache": "Очистить кэш",
+    "clearCache": "Очистить кэш"
+}
