--- a/lib/l10n/app_sr.arb
+++ b/lib/l10n/app_sr.arb
@@ -49,4 +49,5 @@
     "editMind": "Уреди белешку",
     "enterTokenHere": "Унесите токен овде",
     "token": "Токен",
-    "clearCache": "Очисти кеш",
+    "clearCache": "Очисти кеш"
+}
