--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -49,4 +49,5 @@
     "editMind": "编辑笔记",
     "enterTokenHere": "在此输入令牌",
     "token": "令牌",
-    "clearCache": "清除缓存",
+    "clearCache": "清除缓存"
+}
