added firebase distribution

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -49,5 +49,88 @@
     "editMind": "Notiz bearbeiten",
     "enterTokenHere": "Token hier eingeben",
     "token": "Token",
-    "clearCache": "Cache leeren"
+    "clearCache": "Cache leeren",
+    "activeTabs": "Aktive Tabs",
+    "archivePassword": "Archiv-Passwort",
+    "areYouSure": "Sind Sie sicher?",
+    "audioFilesExported": "Audiodateien exportiert",
+    "audioFilesImported": "Audiodateien importiert",
+    "audioFilesToExport": "Audiodateien",
+    "calendarDescription": "Hauptbildschirm mit Kalender der Einträge",
+    "cannotRemoveMainScreen": "Hauptbildschirm kann nicht entfernt werden. Sie verlieren die Option, Tabs einzurichten.",
+    "confirmPassword": "Passwort bestätigen",
+    "continue_": "Weiter",
+    "corruptedFile": "Beschädigte Datei",
+    "create": "Schreiben",
+    "debugMenuDescription": "Entwickler-Tools zum Umschalten experimenteller Funktionen",
+    "deleteOnboardingMindsMessage": "Sie haben Ihre erste Notiz erstellt! Möchten Sie die Tutorial-Notizen löschen?",
+    "deleteOnboardingMindsTitle": "Tutorial-Notizen löschen?",
+    "deleteTutorial": "Löschen",
+    "digest": "Zusammenfassung",
+    "enterPassword": "Passwort eingeben",
+    "error": "Fehler",
+    "exportError": "Export fehlgeschlagen",
+    "exportPassword": "In ZIP exportieren",
+    "exportPasswordDescription": "Fügen Sie ein Passwort hinzu, um Ihren Export zu verschlüsseln. Sie können dies für einen unverschlüsselten Export überspringen.",
+    "exportSuccess": "Export erfolgreich",
+    "hiddenTabs": "Versteckte Tabs",
+    "importError": "Import fehlgeschlagen",
+    "importPassword": "Passwort eingeben",
+    "importPasswordDescription": "Diese Datei ist passwortgeschützt. Bitte geben Sie das Passwort zur Entschlüsselung ein.",
+    "importSuccess": "Import erfolgreich",
+    "incorrectPassword": "Falsches Passwort",
+    "incorrectPasswordMessage": "Das eingegebene Passwort ist falsch. Bitte versuchen Sie es erneut.",
+    "insightsDescription": "Statistiken aller Ihrer Einträge",
+    "insufficientStorage": "Unzureichender Speicherplatz",
+    "invalidFormat": "Ungültiges Format",
+    "keepTutorial": "Behalten",
+    "lastTwoWeeks": "Letzte 2 Wochen",
+    "minds": "Notizen",
+    "mindsExported": "Notizen exportiert",
+    "mindsImported": "Notizen importiert",
+    "mindsToExport": "Notizen",
+    "missingAudioFiles": "Einige Audiodateien fehlen",
+    "noMindsForPeriod": "Keine Notizen für diesen Zeitraum",
+    "noMindsForThisDay": "Keine Notizen für diesen Tag",
+    "noMindsInSelectedPeriod": "Keine Notizen im ausgewählten Zeitraum",
+    "ok": "OK",
+    "onboardingMind1": "Hallo!",
+    "onboardingMind2": "Ich bin keklist - ein persönliches Tagebuch für kurze Notizen",
+    "onboardingMind2Comment1": "Notizen können kommentiert werden",
+    "onboardingMind2Comment2": "Um eine Notiz zu öffnen, tippen Sie darauf",
+    "onboardingMind3": "Im Tab 'Kalender' werden alle Notizen nach Tagen, Wochen und Monaten angezeigt",
+    "onboardingMind4": "Der Tab 'Analytik' zeigt eine kurze Statistik Ihrer Einträge",
+    "onboardingMind5": "Alle Notizen werden nur auf Ihrem Telefon gespeichert",
+    "onboardingMind5Comment1": "Verwenden Sie beim Wechsel des Telefons die Import/Export-Funktion",
+    "password": "Passwort",
+    "passwordsDoNotMatch": "Passwörter stimmen nicht überein",
+    "pleaseAuthenticateToShowContent": "Bitte authentifizieren Sie sich, um den Inhalt Ihrer Notiz anzuzeigen",
+    "profileDescription": "Bildschirm mit Ihrem Profil",
+    "randomMind": "Zufällige Notiz",
+    "reenterPassword": "Passwort erneut eingeben",
+    "retry": "Wiederholen",
+    "searchForYourNotes": "Suchen Sie nach Ihren Notizen",
+    "searchYourEmoji": "Suchen Sie nach Ihrem Emoji...",
+    "selectPeriod": "Zeitraum auswählen ...",
+    "send": "SENDEN",
+    "settingsDescription": "Bildschirm mit allen Einstellungen (Dunkler Modus, Synchronisierung usw.)",
+    "showMindsForPeriod": "Notizen anzeigen für {period}",
+    "skipPassword": "Überspringen (kein Passwort)",
+    "spectrum": "Spektrum",
+    "startDiscussion": "Diskussion beginnen",
+    "thisMonth": "Dieser Monat",
+    "thisWeek": "Diese Woche",
+    "thisYear": "Dieses Jahr",
+    "today": "Heute",
+    "todayDescription": "Nur heutige Notizen",
+    "todayMinds": "Heutige Notizen",
+    "topMinds": "Top-Notizen",
+    "unknownError": "Unbekannter Fehler",
+    "updateYourNickname": "Aktualisieren Sie Ihren Spitznamen",
+    "week": "Woche",
+    "writeSomething": "Schreiben Sie etwas...",
+    "yesterday": "Gestern",
+    "youDidNotCollectAnyEntriesYet": "Sie haben noch keine Einträge gesammelt",
+    "yourFolderName": "Ihr Ordnername",
+    "yourNickname": "Ihr Spitzname"
 }
