--- a/lib/l10n/app_ja.arb
+++ b/lib/l10n/app_ja.arb
@@ -49,5 +49,88 @@
     "editMind": "メモを編集",
     "enterTokenHere": "ここにトークンを入力",
     "token": "トークン",
-    "clearCache": "キャッシュをクリア"
+    "clearCache": "キャッシュをクリア",
+    "activeTabs": "アクティブなタブ",
+    "archivePassword": "アーカイブパスワード",
+    "areYouSure": "よろしいですか？",
+    "audioFilesExported": "音声ファイルをエクスポートしました",
+    "audioFilesImported": "音声ファイルをインポートしました",
+    "audioFilesToExport": "音声ファイル",
+    "calendarDescription": "エントリーのカレンダーがあるメイン画面",
+    "cannotRemoveMainScreen": "メイン画面は削除できません。タブを設定するオプションが失われます。",
+    "confirmPassword": "パスワードを確認",
+    "continue_": "続ける",
+    "corruptedFile": "破損したファイル",
+    "create": "書く",
+    "debugMenuDescription": "実験的な機能を切り替えるための開発者ツール",
+    "deleteOnboardingMindsMessage": "最初のメモを作成しました！チュートリアルノートを削除しますか？",
+    "deleteOnboardingMindsTitle": "チュートリアルノートを削除しますか？",
+    "deleteTutorial": "削除",
+    "digest": "ダイジェスト",
+    "enterPassword": "パスワードを入力",
+    "error": "エラー",
+    "exportError": "エクスポートに失敗しました",
+    "exportPassword": "ZIPにエクスポート",
+    "exportPasswordDescription": "エクスポートを暗号化するためにパスワードを追加します。暗号化しない場合はスキップできます。",
+    "exportSuccess": "エクスポートに成功しました",
+    "hiddenTabs": "非表示のタブ",
+    "importError": "インポートに失敗しました",
+    "importPassword": "パスワードを入力",
+    "importPasswordDescription": "このファイルはパスワードで保護されています。復号化するためにパスワードを入力してください。",
+    "importSuccess": "インポートに成功しました",
+    "incorrectPassword": "パスワードが正しくありません",
+    "incorrectPasswordMessage": "入力されたパスワードが正しくありません。もう一度お試しください。",
+    "insightsDescription": "すべてのエントリーの統計",
+    "insufficientStorage": "ストレージ容量が不足しています",
+    "invalidFormat": "無効な形式",
+    "keepTutorial": "保持",
+    "lastTwoWeeks": "過去2週間",
+    "minds": "メモ",
+    "mindsExported": "メモをエクスポートしました",
+    "mindsImported": "メモをインポートしました",
+    "mindsToExport": "メモ",
+    "missingAudioFiles": "一部の音声ファイルが見つかりません",
+    "noMindsForPeriod": "この期間のメモはありません",
+    "noMindsForThisDay": "この日のメモはありません",
+    "noMindsInSelectedPeriod": "選択した期間にメモはありません",
+    "ok": "OK",
+    "onboardingMind1": "こんにちは！",
+    "onboardingMind2": "私はkeklist - 短いメモの個人日記です",
+    "onboardingMind2Comment1": "メモにはコメントを付けることができます",
+    "onboardingMind2Comment2": "メモを開くには、タップしてください",
+    "onboardingMind3": "「カレンダー」タブでは、すべてのメモが日、週、月ごとに表示されます",
+    "onboardingMind4": "「分析」タブでは、エントリーの簡単な統計が表示されます",
+    "onboardingMind5": "すべてのメモはあなたのスマートフォンにのみ保存されます",
+    "onboardingMind5Comment1": "スマートフォンを変更する際は、インポート/エクスポート機能を使用してください",
+    "password": "パスワード",
+    "passwordsDoNotMatch": "パスワードが一致しません",
+    "pleaseAuthenticateToShowContent": "メモの内容を表示するには認証してください",
+    "profileDescription": "あなたのプロフィールの画面",
+    "randomMind": "ランダムなメモ",
+    "reenterPassword": "パスワードを再入力",
+    "retry": "再試行",
+    "searchForYourNotes": "メモを検索",
+    "searchYourEmoji": "絵文字を検索...",
+    "selectPeriod": "期間を選択...",
+    "send": "送信",
+    "settingsDescription": "すべての設定の画面（ダークモード、同期など）",
+    "showMindsForPeriod": "{period}のメモを表示",
+    "skipPassword": "スキップ（パスワードなし）",
+    "spectrum": "スペクトラム",
+    "startDiscussion": "ディスカッションを開始",
+    "thisMonth": "今月",
+    "thisWeek": "今週",
+    "thisYear": "今年",
+    "today": "今日",
+    "todayDescription": "今日のメモのみ",
+    "todayMinds": "今日のメモ",
+    "topMinds": "トップメモ",
+    "unknownError": "不明なエラー",
+    "updateYourNickname": "ニックネームを更新",
+    "week": "週",
+    "writeSomething": "何か書いてください...",
+    "yesterday": "昨日",
+    "youDidNotCollectAnyEntriesYet": "まだエントリーを収集していません",
+    "yourFolderName": "あなたのフォルダー名",
+    "yourNickname": "あなたのニックネーム"
 }
