--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -49,5 +49,88 @@
     "editMind": "Редактировать заметку",
     "enterTokenHere": "Введите токен здесь",
     "token": "Токен",
-    "clearCache": "Очистить кэш"
+    "clearCache": "Очистить кэш",
+    "activeTabs": "Активные вкладки",
+    "archivePassword": "Пароль архива",
+    "areYouSure": "Вы уверены?",
+    "audioFilesExported": "Аудиофайлы экспортированы",
+    "audioFilesImported": "Аудиофайлы импортированы",
+    "audioFilesToExport": "Аудиофайлы",
+    "calendarDescription": "Главный экран с календарем записей",
+    "cannotRemoveMainScreen": "Невозможно удалить главный экран. Вы потеряете возможность настраивать вкладки.",
+    "confirmPassword": "Подтвердите пароль",
+    "continue_": "Продолжить",
+    "corruptedFile": "Поврежденный файл",
+    "create": "Написать",
+    "debugMenuDescription": "Инструменты разработчика для переключения экспериментальных функций",
+    "deleteOnboardingMindsMessage": "Вы создали свою первую заметку! Хотите удалить заметки из обучения?",
+    "deleteOnboardingMindsTitle": "Удалить заметки обучения?",
+    "deleteTutorial": "Удалить",
+    "digest": "Сводка",
+    "enterPassword": "Введите пароль",
+    "error": "Ошибка",
+    "exportError": "Экспорт не удался",
+    "exportPassword": "Экспорт в ZIP",
+    "exportPasswordDescription": "Добавьте пароль для шифрования экспорта. Вы можете пропустить это для незашифрованного экспорта.",
+    "exportSuccess": "Экспорт выполнен успешно",
+    "hiddenTabs": "Скрытые вкладки",
+    "importError": "Импорт не удался",
+    "importPassword": "Введите пароль",
+    "importPasswordDescription": "Этот файл защищен паролем. Пожалуйста, введите пароль для расшифровки.",
+    "importSuccess": "Импорт выполнен успешно",
+    "incorrectPassword": "Неверный пароль",
+    "incorrectPasswordMessage": "Введенный пароль неверен. Пожалуйста, попробуйте снова.",
+    "insightsDescription": "Статистика всех ваших записей",
+    "insufficientStorage": "Недостаточно памяти",
+    "invalidFormat": "Неверный формат",
+    "keepTutorial": "Оставить",
+    "lastTwoWeeks": "Последние 2 недели",
+    "minds": "Заметки",
+    "mindsExported": "Заметки экспортированы",
+    "mindsImported": "Заметки импортированы",
+    "mindsToExport": "Заметки",
+    "missingAudioFiles": "Некоторые аудиофайлы отсутствуют",
+    "noMindsForPeriod": "Нет заметок за этот период",
+    "noMindsForThisDay": "Нет заметок за этот день",
+    "noMindsInSelectedPeriod": "Нет заметок в выбранном периоде",
+    "ok": "OK",
+    "onboardingMind1": "Привет!",
+    "onboardingMind2": "Я keklist - личный дневник коротких заметок",
+    "onboardingMind2Comment1": "Заметки можно комментировать",
+    "onboardingMind2Comment2": "Чтобы открыть заметку, нажмите на неё",
+    "onboardingMind3": "На вкладке 'Календарь' все заметки отображаются по дням, неделям и месяцам",
+    "onboardingMind4": "Вкладка 'Аналитика' показывает краткую статистику ваших записей",
+    "onboardingMind5": "Все заметки хранятся только на вашем телефоне",
+    "onboardingMind5Comment1": "При смене телефона используйте функцию Импорт/Экспорт",
+    "password": "Пароль",
+    "passwordsDoNotMatch": "Пароли не совпадают",
+    "pleaseAuthenticateToShowContent": "Пожалуйста, пройдите аутентификацию для отображения содержимого вашей заметки",
+    "profileDescription": "Экран с вашим профилем",
+    "randomMind": "Случайная заметка",
+    "reenterPassword": "Введите пароль повторно",
+    "retry": "Повторить",
+    "searchForYourNotes": "Поиск ваших заметок",
+    "searchYourEmoji": "Поиск вашего эмодзи...",
+    "selectPeriod": "Выберите период ...",
+    "send": "ОТПРАВИТЬ",
+    "settingsDescription": "Экран со всеми настройками (темный режим, синхронизация и т.д.)",
+    "showMindsForPeriod": "Показать заметки за {period}",
+    "skipPassword": "Пропустить (без пароля)",
+    "spectrum": "Спектр",
+    "startDiscussion": "Начать обсуждение",
+    "thisMonth": "Этот месяц",
+    "thisWeek": "Эта неделя",
+    "thisYear": "Этот год",
+    "today": "Сегодня",
+    "todayDescription": "Только сегодняшние заметки",
+    "todayMinds": "Сегодняшние заметки",
+    "topMinds": "Топ заметок",
+    "unknownError": "Неизвестная ошибка",
+    "updateYourNickname": "Обновите ваш никнейм",
+    "week": "Неделя",
+    "writeSomething": "Напишите что-нибудь...",
+    "yesterday": "Вчера",
+    "youDidNotCollectAnyEntriesYet": "Вы еще не собрали ни одной записи",
+    "yourFolderName": "Название вашей папки",
+    "yourNickname": "Ваш никнейм"
 }
