--- a/lib/l10n/app_sr.arb
+++ b/lib/l10n/app_sr.arb
@@ -49,5 +49,88 @@
     "editMind": "Уреди белешку",
     "enterTokenHere": "Унесите токен овде",
     "token": "Токен",
-    "clearCache": "Очисти кеш"
+    "clearCache": "Очисти кеш",
+    "activeTabs": "Активне картице",
+    "archivePassword": "Лозинка архиве",
+    "areYouSure": "Да ли сте сигурни?",
+    "audioFilesExported": "Аудио фајлови извезени",
+    "audioFilesImported": "Аудио фајлови увезени",
+    "audioFilesToExport": "Аудио фајлови",
+    "calendarDescription": "Главни екран са календаром уноса",
+    "cannotRemoveMainScreen": "Није могуће уклонити главни екран. Изгубићеш опцију да подесиш картице.",
+    "confirmPassword": "Потврди лозинку",
+    "continue_": "Настави",
+    "corruptedFile": "Оштећени фајл",
+    "create": "Напиши",
+    "debugMenuDescription": "Алати за програмере за укључивање експерименталних функција",
+    "deleteOnboardingMindsMessage": "Направио си своју прву белешку! Да ли желиш да обришеш белешке из туторијала?",
+    "deleteOnboardingMindsTitle": "Обрисати белешке из туторијала?",
+    "deleteTutorial": "Обриши",
+    "digest": "Сажетак",
+    "enterPassword": "Унеси лозинку",
+    "error": "Грешка",
+    "exportError": "Извоз није успео",
+    "exportPassword": "Извоз у ZIP",
+    "exportPasswordDescription": "Додај лозинку да шифрујеш свој извоз. Можеш да прескочиш ово за нешифровани извоз.",
+    "exportSuccess": "Извоз успешан",
+    "hiddenTabs": "Скривене картице",
+    "importError": "Увоз није успео",
+    "importPassword": "Унеси лозинку",
+    "importPasswordDescription": "Овај фајл је заштићен лозинком. Унеси лозинку за дешифровање.",
+    "importSuccess": "Увоз успешан",
+    "incorrectPassword": "Нетачна лозинка",
+    "incorrectPasswordMessage": "Лозинка коју си унео је нетачна. Покушај поново.",
+    "insightsDescription": "Статистика свих твојих уноса",
+    "insufficientStorage": "Недовољно простора за складиштење",
+    "invalidFormat": "Неважећи формат",
+    "keepTutorial": "Задржи",
+    "lastTwoWeeks": "Последње 2 недеље",
+    "minds": "Белешке",
+    "mindsExported": "Белешке извезене",
+    "mindsImported": "Белешке увезене",
+    "mindsToExport": "Белешке",
+    "missingAudioFiles": "Неки аудио фајлови недостају",
+    "noMindsForPeriod": "Нема белешки за овај период",
+    "noMindsForThisDay": "Нема белешки за овај дан",
+    "noMindsInSelectedPeriod": "Нема белешки у изабраном периоду",
+    "ok": "У реду",
+    "onboardingMind1": "Здраво!",
+    "onboardingMind2": "Ја сам keklist - лични дневник кратких белешки",
+    "onboardingMind2Comment1": "Белешке могу бити коментарисане",
+    "onboardingMind2Comment2": "Да отвориш белешку, притисни на њу",
+    "onboardingMind3": "У картици 'Календар' све белешке су приказане по данима, недељама и месецима",
+    "onboardingMind4": "Картица 'Аналитика' приказује кратку статистику твојих уноса",
+    "onboardingMind5": "Све белешке су сачуване само на твојом телефону",
+    "onboardingMind5Comment1": "При промени телефона, користи функцију Увоз/Извоз",
+    "password": "Лозинка",
+    "passwordsDoNotMatch": "Лозинке се не подударају",
+    "pleaseAuthenticateToShowContent": "Молим те аутентификуј се да би приказао садржај твоје белешке",
+    "profileDescription": "Екран са твојим профилом",
+    "randomMind": "Случајна белешка",
+    "reenterPassword": "Поново унеси лозинку",
+    "retry": "Покушај поново",
+    "searchForYourNotes": "Претражи своје белешке",
+    "searchYourEmoji": "Претражи свој емоџи...",
+    "selectPeriod": "Изабери период ...",
+    "send": "ПОШАЉИ",
+    "settingsDescription": "Екран са свим подешавањима (тамни режим, синхронизација итд.)",
+    "showMindsForPeriod": "Прикажи белешке за {period}",
+    "skipPassword": "Прескочи (без лозинке)",
+    "spectrum": "Спектар",
+    "startDiscussion": "Почни дискусију",
+    "thisMonth": "Овај месец",
+    "thisWeek": "Ова недеља",
+    "thisYear": "Ова година",
+    "today": "Данас",
+    "todayDescription": "Само данашње белешке",
+    "todayMinds": "Данашње белешке",
+    "topMinds": "Топ белешке",
+    "unknownError": "Непозната грешка",
+    "updateYourNickname": "Ажурирај свој надимак",
+    "week": "Недеља",
+    "writeSomething": "Напиши нешто...",
+    "yesterday": "Јуче",
+    "youDidNotCollectAnyEntriesYet": "Још увек ниси прикупио ниједан унос",
+    "yourFolderName": "Назив твог фолдера",
+    "yourNickname": "Твој надимак"
 }
