--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -49,5 +49,88 @@
     "editMind": "编辑笔记",
     "enterTokenHere": "在此输入令牌",
     "token": "令牌",
-    "clearCache": "清除缓存"
+    "clearCache": "清除缓存",
+    "activeTabs": "活动标签页",
+    "archivePassword": "归档密码",
+    "areYouSure": "您确定吗？",
+    "audioFilesExported": "音频文件已导出",
+    "audioFilesImported": "音频文件已导入",
+    "audioFilesToExport": "音频文件",
+    "calendarDescription": "带有条目日历的主屏幕",
+    "cannotRemoveMainScreen": "无法删除主屏幕。您将失去设置标签页的选项。",
+    "confirmPassword": "确认密码",
+    "continue_": "继续",
+    "corruptedFile": "文件已损坏",
+    "create": "写",
+    "debugMenuDescription": "用于切换实验性功能的开发者工具",
+    "deleteOnboardingMindsMessage": "您已创建了第一条笔记！要删除教程笔记吗？",
+    "deleteOnboardingMindsTitle": "删除教程笔记？",
+    "deleteTutorial": "删除",
+    "digest": "摘要",
+    "enterPassword": "输入密码",
+    "error": "错误",
+    "exportError": "导出失败",
+    "exportPassword": "导出为ZIP",
+    "exportPasswordDescription": "添加密码以加密您的导出。您可以跳过此步骤进行不加密导出。",
+    "exportSuccess": "导出成功",
+    "hiddenTabs": "隐藏标签页",
+    "importError": "导入失败",
+    "importPassword": "输入密码",
+    "importPasswordDescription": "此文件受密码保护。请输入密码以解密。",
+    "importSuccess": "导入成功",
+    "incorrectPassword": "密码错误",
+    "incorrectPasswordMessage": "您输入的密码不正确。请重试。",
+    "insightsDescription": "所有条目的统计信息",
+    "insufficientStorage": "存储空间不足",
+    "invalidFormat": "格式无效",
+    "keepTutorial": "保留",
+    "lastTwoWeeks": "最近2周",
+    "minds": "笔记",
+    "mindsExported": "笔记已导出",
+    "mindsImported": "笔记已导入",
+    "mindsToExport": "笔记",
+    "missingAudioFiles": "某些音频文件缺失",
+    "noMindsForPeriod": "此期间没有笔记",
+    "noMindsForThisDay": "这一天没有笔记",
+    "noMindsInSelectedPeriod": "所选期间没有笔记",
+    "ok": "确定",
+    "onboardingMind1": "你好！",
+    "onboardingMind2": "我是keklist - 一个短笔记的个人日记",
+    "onboardingMind2Comment1": "笔记可以添加评论",
+    "onboardingMind2Comment2": "要打开笔记，请点击它",
+    "onboardingMind3": "在'日历'标签页中，所有笔记按天、周和月显示",
+    "onboardingMind4": "'分析'标签页显示您条目的简要统计信息",
+    "onboardingMind5": "所有笔记仅存储在您的手机上",
+    "onboardingMind5Comment1": "更换手机时，请使用导入/导出功能",
+    "password": "密码",
+    "passwordsDoNotMatch": "密码不匹配",
+    "pleaseAuthenticateToShowContent": "请进行身份验证以显示您的笔记内容",
+    "profileDescription": "您的个人资料屏幕",
+    "randomMind": "随机笔记",
+    "reenterPassword": "重新输入密码",
+    "retry": "重试",
+    "searchForYourNotes": "搜索您的笔记",
+    "searchYourEmoji": "搜索您的表情符号...",
+    "selectPeriod": "选择期间...",
+    "send": "发送",
+    "settingsDescription": "包含所有设置的屏幕（深色模式、同步等）",
+    "showMindsForPeriod": "显示{period}的笔记",
+    "skipPassword": "跳过（无密码）",
+    "spectrum": "光谱",
+    "startDiscussion": "开始讨论",
+    "thisMonth": "本月",
+    "thisWeek": "本周",
+    "thisYear": "今年",
+    "today": "今天",
+    "todayDescription": "仅今天的笔记",
+    "todayMinds": "今天的笔记",
+    "topMinds": "热门笔记",
+    "unknownError": "未知错误",
+    "updateYourNickname": "更新您的昵称",
+    "week": "周",
+    "writeSomething": "写点什么...",
+    "yesterday": "昨天",
+    "youDidNotCollectAnyEntriesYet": "您还没有收集任何条目",
+    "yourFolderName": "您的文件夹名称",
+    "yourNickname": "您的昵称"
 }
